--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 		<link rel="stylesheet" href="/css/app.css">
 		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/animate.css">
+		<!--
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
+		-->
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -57,7 +59,9 @@
 		</div>
 
 		<script src="/js/lib/jquery/jquery-2.0.3.min.js"></script>
+<!--
 		<script src="/bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
+		-->
 		<script src="/js/lib/angular/angular.js"></script>
 		<script src="/js/lib/angular/angular-route.js"></script>
 		<script src="/js/lib/angular/angular-sanitize.js"></script>
@@ -70,17 +74,21 @@
 		<script src="/js/filters.js"></script>
 		<script src="/js/directives.js"></script>
 		<script src="/js/services.js"></script>
+		<script src="/js/login.util.js"></script>
+		<script src="/js/controllers/root.js"></script>
 		<script src="/js/controllers/controllers.js"></script>
+		<script src="/js/controllers/login.js"></script>
+		<script src="/js/controllers/welcome.js"></script>
 <!--
 
 
 		<script src="/js/controllers/controllers2.js"></script>
-		<script src="/js/controllers/login.js"></script>
+
 		<script src="/js/controllers/stats.js"></script>
 		<script src="/js/controllers/inconsistencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
 		<script src="/js/controllers/detalles.js"></script>
-		<script src="/js/controllers/welcome.js"></script>
+		
 		<script src="/js/controllers/update.js"></script>
 		<script src="/js/lib/FileSaver.js"></script>
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
