--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,15 @@
 		<script src="/js/lib/angular/angular-animate.js"></script>
 
 		<script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
+		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 
 		<script src="/js/app.js"></script>
 		<script src="/js/filters.js"></script>
 		<script src="/js/directives.js"></script>
 		<script src="/js/services.js"></script>
 		<script src="/js/login.util.js"></script>
+		<script src="/js/translate.js"></script>
+
 		<script src="/js/controllers/root.js"></script>
 		<script src="/js/controllers/controllers.js"></script>
 		<script src="/js/controllers/login.js"></script>
@@ -66,7 +69,6 @@
 		<script src="/js/controllers/actividad.js"></script>
 
 <!--
-
 		<script src="/js/controllers/stats.js"></script>
 		<script src="/js/controllers/inconsistencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
@@ -76,6 +78,7 @@
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 		<script src="/js/lib/FileSaver.js"></script>
 		<script src="/bower_components/d3/d3.js"></script>
+		
 		
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
