--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,17 @@
 		<link rel="stylesheet" href="/css/app.css">
 		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/animate.css">
-		<!--
+		
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
-		-->
+		
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div role="navigation" ng-controller="AppCtrl" class="navbar navbar-default navbar-fixed-top">
 			<div style="background-color:#9E1B32" class="navbar-header">
 				<button type="button" data-toggle="collapse" data-target=".navbar-ex1-collapse" class="navbar-toggle">
-					<span class="sr-only">Toggle navigation</span>
+					<span class="sr-only">Desplegar menú</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -61,7 +61,6 @@
 		<script src="/js/translate.js"></script>
 
 		<script src="/js/controllers/root.js"></script>
-		<script src="/js/controllers/controllers.js"></script>
 		<script src="/js/controllers/login.js"></script>
 		<script src="/js/controllers/welcome.js"></script>
 		<script src="/js/controllers/update.js"></script>
@@ -69,13 +68,15 @@
 		<script src="/js/controllers/actividad.js"></script>
 		<script src="/js/controllers/stats.js"></script>
 		<script src="/js/controllers/inconsistencias.js"></script>
+		<script src="/js/controllers/incoherencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
-<!--
+
+		<script src="/bower_components/d3/d3.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.js"></script>
--->
+
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 		<script src="/js/lib/FileSaver.js"></script>
-		<script src="/bower_components/d3/d3.js"></script>
+		
 		
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
