Modificaciones parciales para incorporar cambios

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
 		<script src="/js/controllers/inconsistencias.js"></script>
 		<script src="/js/controllers/incoherencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
+		<script src="/js/controllers/permisos.js"></script>
 
 		<script src="/bower_components/d3/d3.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.js"></script>
