--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,14 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav"  ng-if="logeado">
-					<li ng-class="{active:nav==nav.id}" ng-repeat="nav in $root.navegabilidad">
-						<a href="{{nav.id}}">{{nav.caption}}</a>
+					<li ng-class="{active:$root.nav==navg.id}" ng-repeat="navg in $root.navegabilidad">
+						<a href="{{navg.id}}">{{navg.caption}}</a>
 					</li>
 					<li class="dropdown" ng-If="$root.session.permisoscalculados.superuser" >
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administrar <span class="caret"></span></a>
 			          <ul class="dropdown-menu" role="menu">
-						<li ng-class="{active:nav==nav.id}" ng-repeat="nav in $root.navegabilidadSuper">
-							<a href="{{nav.id}}">{{nav.caption}}</a>
+						<li ng-class="{active:$root.nav==navg.id}" ng-repeat="navg in $root.navegabilidadSuper">
+							<a href="{{navg.id}}">{{navg.caption}}</a>
 						</li>
 						</ul>
 					</li>
