--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 		<script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 
+		<script type="text/javascript" src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
 		<script src="/js/app.js"></script>
 		<script src="/js/filters.js"></script>
 		<script src="/js/directives.js"></script>
