--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		
+		
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -60,11 +61,11 @@
 
 		<script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
-
-		<script type="text/javascript" src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
+		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
+		
 		<script src="/js/app.js"></script>
-		<script src="/js/filters.js"></script>
-		<script src="/js/directives.js"></script>
+		<script src="/js/filters.js"></script>		
+		<script src="/js/directives.js"></script>		
 		<script src="/js/services.js"></script>
 		<script src="/js/login.util.js"></script>
 		<script src="/js/translate.js"></script>
