Stats arreglado, al menos temporalmente. Es mejorable

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 		<script src="/js/lib/FileSaver.js"></script>
-		
+		<script src="/js/lib/jquery.wordexport.js"></script>
 		
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
