Etiquetas: first approach

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,9 @@
 		<link rel="stylesheet" href="/css/app.css">
 		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/animate.css">
-		
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
-		
-		
+		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -80,6 +78,8 @@
 		<script src="/js/controllers/inconsistencias.js"></script>
 		<script src="/js/controllers/incoherencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
+		<script src="/js/controllers/etiqueta.js"></script>
+
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
 
@@ -90,6 +90,7 @@
 		<script src="/js/lib/FileSaver.js"></script>
 		<script src="/js/lib/jquery.wordexport.js"></script>
 		
+		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 		<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
