--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
 						</li>
 						</ul>
 					</li>
+					<li>
+						<input type="text" class="form-control" ng-blur="$root.irProcedimiento()" ng-model="$root.procedimiento" length="4" placeholder="ID" style="width:4em" />
+					</li>
 				</ul>
 			</div>
 		</div>
