Periodos primera parte

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 		<script src="/js/controllers/incoherencias.js"></script>
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
 		<script src="/js/controllers/etiqueta.js"></script>
+		<script src="/js/controllers/periodos.js"></script>
 
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
