incompleto newprocedimiento por translado

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js">
+		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap.js">
 	</head>
 	<body>
 		<div role="navigation" ng-controller="AppCtrl" class="navbar navbar-default navbar-fixed-top">
@@ -83,6 +85,7 @@
 		<script src="/js/controllers/reglasinconsistencias.js"></script>
 		<script src="/js/controllers/etiqueta.js"></script>
 		<script src="/js/controllers/periodos.js"></script>
+		<script src="/js/controllers/newprocedimiento.js"></script>
 
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
