--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 		<script src="/js/lib/angular/angular-sanitize.js"></script>
 		<script src="/js/lib/angular/angular-resource.js"></script>
 		<script src="/js/lib/angular/angular-animate.js"></script>
+		<script src="/js/lib/angular/angular-cookies.js"></script>
 
 		<script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
