--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,7 @@
 		<script src="/js/filters.js"></script>		
 		<script src="/js/directives.js"></script>		
 		<script src="/js/services.js"></script>
-		<!--<script src="/js/logincarm.util.js"></script> -->
-		<script src="/js/login.util.js"></script>
+		<script src="/js/logincarm.util.js"></script>
 		<script src="/js/translate.js"></script>
 
 		<script src="/js/controllers/root.js"></script>
