--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 						</li>
 						</ul>
 					</li>
-					<li>
+					<li class="hidden-xs hidden-sm">
 						<input type="text" class="form-control" ng-blur="$root.irProcedimiento()" ng-model="$root.procedimiento" length="4" placeholder="ID" style="width:4em" />
 					</li>
 				</ul>
