--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
 		<link rel="stylesheet" href="/css/font-awesome-4.2.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js">
-		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap.js">
+		
 	</head>
 	<body>
 		<div role="navigation" ng-controller="AppCtrl" class="navbar navbar-default navbar-fixed-top">
@@ -71,8 +70,7 @@
 		<script src="/js/filters.js"></script>		
 		<script src="/js/directives.js"></script>		
 		<script src="/js/services.js"></script>
-		<!--<script src="/js/logincarm.util.js"></script>-->
-		<script src="/js/login.util.js"></script>
+		
 		<script src="/js/translate.js"></script>
 
 		<script src="/js/controllers/root.js"></script>
@@ -103,7 +101,8 @@
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 		<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-
+		<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+		<script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="/js/lib/angular/ui-bootstrap-tpls-0.11.0.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.1.1/angular-filter.js"> </script>
