--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
 		
+		<script src="/tipologin.js"></script>
 		<script src="/js/app.js"></script>
 		<script src="/js/filters.js"></script>		
 		<script src="/js/directives.js"></script>		
