Update procedimiento enviaba por error datos innecesarios. Otros errores de la UI

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a href="/welcome" class="navbar-brand">
-					<img src="/imgs/escudo_cab.gif" class="logo">
+					<img src="/imgs/escudo_cab.gif" class="logo" />
 				</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
