--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
 					<li ng-class="{active:$root.nav==navg.id}" ng-repeat="navg in $root.navegabilidad">
 						<a href="{{navg.id}}">{{navg.caption}}</a>
 					</li>
+					<li ng-class="{active:$root.nav=='grant'}" ng-if="$root.permisoscalculados.grant">
+						<a href="{{navg.id}}">{{navg.caption}}</a>
+					</li>
 					<li class="dropdown" ng-If="$root.permisoscalculados.superuser" >
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administrar <span class="caret"></span></a>
 			          <ul class="dropdown-menu" role="menu">
