Index modificado para tirar de datos reales: Procedimientos y Tramites (por probar). Api de Expedientes

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,7 @@
 
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
+                <script src="/js/controllers/testexpediente.js"></script>
 
 		<script src="/bower_components/d3/d3.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.js"></script>
