--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
 
 		<script src="/js/controllers/root.js"></script>
 		<script src="/js/controllers/login.js"></script>
+		<script src="/js/controllers/loginas.js"></script>
 		<script src="/js/controllers/welcome.js"></script>
 		<script src="/js/controllers/update.js"></script>
 		<script src="/js/controllers/detalles.js"></script>
