Cambio de boton exportar excel y cambiado el texto de dias hababiles

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 		<script src="/js/controllers/etiqueta.js"></script>
 		<script src="/js/controllers/periodos.js"></script>
 		<script src="/js/controllers/newprocedimiento.js"></script>
-
+                <script src="/js/controllers/informes.js"></script>
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
                 <script src="/js/controllers/testexpediente.js"></script>
