--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,8 @@
 		  <script src="/bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
 		<!--<![endif]--> 
 		
+
+
 		<script src="/js/lib/angular/angular.js"></script>
 		<script src="/js/lib/angular/angular-route.js"></script>
 		<script src="/js/lib/angular/angular-sanitize.js"></script>
@@ -86,9 +88,9 @@
 		<script src="/js/lib/angular/angular-animate.js"></script>
 		<script src="/js/lib/angular/angular-cookies.js"></script>
 
+		<script src="/js/lib/socket.io-1.2.1.js"></script>
 
 		<script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script>
-
 
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
@@ -115,10 +117,11 @@
 		<script src="/js/controllers/etiqueta.js"></script>
 		<script src="/js/controllers/periodos.js"></script>
 		<script src="/js/controllers/newprocedimiento.js"></script>
-                <script src="/js/controllers/informes.js"></script>
+		<script src="/js/controllers/informes.js"></script>
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
-                <script src="/js/controllers/testexpediente.js"></script>
+		<script src="/js/controllers/testexpediente.js"></script>
+		<script src="/js/controllers/debug.js"></script>
 
 		<script src="/bower_components/d3/d3.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.js"></script>
