--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,7 @@
 		<script src="/js/controllers/permisos.js"></script>
 		<script src="/js/controllers/recalculate.js"></script>
 		<script src="/js/controllers/testexpediente.js"></script>
+		<script src="/js/controllers/detallesorganica.js"></script>
 		<script src="/js/controllers/debug.js"></script>
 
 		<script src="/bower_components/d3/d3.js"></script>
