Revisión de código: eliminación de código innecesario y eslint

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 		</div>
 		<script>
 		//IE sucks
-			if (typeof console === "undefined" || typeof console.log === "undefined") { console = { log: function(){}, error: function(){} } };
+			if (typeof console === 'undefined' || typeof console.log === 'undefined') { console = { log: function(){}, error: function(){} } };
 		</script>
 
 		<!--[if lt IE 9]>
