Feedback basic list functionality

--- a/public/index.html
+++ b/public/index.html
@@ -157,6 +157,7 @@
 		<script src="/js/controllers/testexpediente.js"></script>
 		<script src="/js/controllers/detallesorganica.js"></script>
 		<script src="/js/controllers/debug.js"></script>
+		<script src="/js/controllers/feedback.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
