Using .min. version of angular library

--- a/public/index.html
+++ b/public/index.html
@@ -112,12 +112,12 @@
 		<script src="/js/lib/jquery.wordexport.js"></script>
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 
-		<script src="/js/lib/angular/angular.js"></script>
-		<script src="/js/lib/angular/angular-route.js"></script>
-		<script src="/js/lib/angular/angular-sanitize.js"></script>
-		<script src="/js/lib/angular/angular-resource.js"></script>
-		<script src="/js/lib/angular/angular-animate.js"></script>
-		<script src="/js/lib/angular/angular-cookies.js"></script>
+		<script src="/js/lib/angular/angular.min.js"></script>
+		<script src="/js/lib/angular/angular-route.min.js"></script>
+		<script src="/js/lib/angular/angular-sanitize.min.js"></script>
+		<script src="/js/lib/angular/angular-resource.min.js"></script>
+		<script src="/js/lib/angular/angular-animate.min.js"></script>
+		<script src="/js/lib/angular/angular-cookies.min.js"></script>
 
 		<script src="/js/lib/socket.io-1.2.1.js"></script>
 
