--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="/js/lib/feedback.css">
 	</head>
 	<body>
-		<div role="navigation" ng-controller="AppCtrl" class="navbar navbar-default navbar-fixed-top">
+		<div role="navigation" ng-controller="AppCtrl" class="navbar navbar-default navbar-fixed-top ng-cloak">
 			<div style="background-color:#9E1B32" class="navbar-header">
 				<button type="button" data-toggle="collapse" data-target=".navbar-ex1-collapse" class="navbar-toggle">
 					<span class="sr-only">Desplegar menú</span>
@@ -112,12 +112,12 @@
 		<script src="/js/lib/jquery.wordexport.js"></script>
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 
-		<script src="/js/lib/angular/angular.min.js"></script>
-		<script src="/js/lib/angular/angular-route.min.js"></script>
-		<script src="/js/lib/angular/angular-sanitize.min.js"></script>
-		<script src="/js/lib/angular/angular-resource.min.js"></script>
-		<script src="/js/lib/angular/angular-animate.min.js"></script>
-		<script src="/js/lib/angular/angular-cookies.min.js"></script>
+		<script src="/bower_components/angular/angular.min.js"></script>
+		<script src="/bower_components/angular-route/angular-route.min.js"></script>
+		<script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+		<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
+		<script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+		<script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
 
 		<script src="/js/lib/socket.io-1.2.1.js"></script>
 
@@ -128,6 +128,8 @@
 		<script src="/bower_components/angularjs-toaster/toaster.js"></script>
 		<script src="/bower_components/d3/d3.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.js"></script>
+		<script src="/bower_components/bernii/gauge.js/dist/gauge.min.js"></script>
+
 		<script src="/js/lib/feedback.js"></script>
 		
 		<script src="/tipologin.js"></script>
@@ -136,6 +138,7 @@
 		<script src="/js/directives.js"></script>		
 		<script src="/js/services.js"></script>
 		<script src="/js/translate.js"></script>
+		<script src="/js/ui.js"></script>
 
 		<script src="/js/controllers/root.js"></script>
 		<script src="/js/controllers/login.js"></script>
@@ -158,6 +161,7 @@
 		<script src="/js/controllers/detallesorganica.js"></script>
 		<script src="/js/controllers/debug.js"></script>
 		<script src="/js/controllers/feedback.js"></script>
+		<script src="/js/controllers/carta.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
