--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 		  <script>var angularFileUploadLoaded=false;var ie8=true;</script>
 		<![endif]-->
 
-		<!--[if (gte IE 9) | (!IE)]><!-->  
+		<!--[if (gte IE 9) | (!IE)]><!-->
 		<script>var angularFileUploadLoaded = true;</script>
 		<script>
 			//optional need to be loaded before angular-file-upload-shim(.min).js
@@ -106,8 +106,8 @@
 		</script>
 		<script src="/js/lib/jquery/jquery-2.0.3.min.js"></script>
 		<script src="/bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
-		<!--<![endif]--> 
-		
+		<!--<![endif]-->
+
 		<script src="/js/lib/FileSaver.js"></script>
 		<script src="/js/lib/jquery.wordexport.js"></script>
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
@@ -131,11 +131,11 @@
 		<script src="/bower_components/bernii/gauge.js/dist/gauge.min.js"></script>
 
 		<script src="/js/lib/feedback.js"></script>
-		
+
 		<script src="/tipologin.js"></script>
 		<script src="/js/app.js"></script>
-		<script src="/js/filters.js"></script>		
-		<script src="/js/directives.js"></script>		
+		<script src="/js/filters.js"></script>
+		<script src="/js/directives.js"></script>
 		<script src="/js/services.js"></script>
 		<script src="/js/translate.js"></script>
 		<script src="/js/ui.js"></script>
@@ -162,6 +162,7 @@
 		<script src="/js/controllers/debug.js"></script>
 		<script src="/js/controllers/feedback.js"></script>
 		<script src="/js/controllers/carta.js"></script>
+		<script src="/js/controllers/entidadobjeto.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
