--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
 		<script src="/js/controllers/carta.js"></script>
 		<script src="/js/controllers/entidadobjeto.js"></script>
                 <script src="/js/controllers/objetivo.js"></script>
+                <script src="/js/controllers/indicador.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
