Updated Angular-Bootstrap version

--- a/public/index.html
+++ b/public/index.html
@@ -170,10 +170,10 @@
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 		<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-		<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-		<script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+		<!--<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
+		<!--<script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>-->
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script src="/js/lib/angular/ui-bootstrap-tpls-0.11.0.min.js"></script>
+		<script src="/js/lib/angular/ui-bootstrap-tpls-0.14.3.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.1.1/angular-filter.js"></script>
 	</body>
 </html>
