--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,7 @@
 		<script src="/js/controllers/debug.js"></script>
 		<script src="/js/controllers/feedback.js"></script>
 		<script src="/js/controllers/carta.js"></script>
+		<script src="/js/controllers/operador.js"></script>
 		<script src="/js/controllers/entidadobjeto.js"></script>
 		<script src="/js/controllers/objetivo.js"></script>
 		<script src="/js/controllers/indicador.js"></script>
