--- a/public/index.html
+++ b/public/index.html
@@ -167,6 +167,7 @@
 		<script src="/js/controllers/entidadobjeto.js"></script>
 		<script src="/js/controllers/objetivo.js"></script>
 		<script src="/js/controllers/indicador.js"></script>
+                <script src="/js/controllers/formula.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
@@ -177,5 +178,6 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="/js/lib/angular/ui-bootstrap-tpls-0.14.3.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.1.1/angular-filter.js"></script>
+                <script src="/bower_components/ngDraggable/ngDraggable.js"></script>
 	</body>
 </html>
