Font Awesome now its included using bower

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
 		<link rel="stylesheet" href="/bower_components/angularjs-toaster/toaster.css">
-		<link rel="stylesheet" href="/css/font-awesome-4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/js/lib/feedback.css">
 	</head>
 	<body>
