more bower_components removed from repository

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 			};
 			var ie8 = false;
 		</script>
-		<script src="/js/lib/jquery/jquery-2.0.3.min.js"></script>
+		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
 		<!--<![endif]-->
 
