--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf8">
 		<base href="/">
 		<title>SICI</title>
-		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="all">
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="/css/app.css">
 		<link rel="stylesheet" href="/css/login.css">
@@ -161,6 +161,7 @@
 		<script src="/js/controllers/debug.js"></script>
 		<script src="/js/controllers/feedback.js"></script>
 		<script src="/js/controllers/carta.js"></script>
+		<script src="/js/controllers/cartaprintable.js"></script>
 		<script src="/js/controllers/operador.js"></script>
 		<script src="/js/controllers/entidadobjeto.js"></script>
 		<script src="/js/controllers/objetivo.js"></script>
