--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
-		<link rel="stylesheet" href="/bower_components/angularjs-toaster/toaster.css">
+		<link rel="stylesheet" href="/bower_components/angularjs-toaster/toaster.min.css">
 		<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/js/lib/feedback.css">
 	</head>
@@ -26,7 +26,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a href="/welcome" class="navbar-brand">
-					<img src="/imgs/escudo_cab.gif" class="logo" onclick="if ($('.container-fluid').text().trim()==''){ window.localStorage.setItem('client_session',''); window.localStorage.setItem('token',''); }" />
+					<img style="width:100px;height:42px" src="/imgs/escudo_cab.gif" class="logo" onclick="if ($('.container-fluid').text().trim()==''){ window.localStorage.setItem('client_session',''); window.localStorage.setItem('token',''); }" />
 				</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -125,9 +125,9 @@
 
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
-		<script src="/bower_components/angularjs-toaster/toaster.js"></script>
-		<script src="/bower_components/d3/d3.js"></script>
-		<script src="/bower_components/nvd3/nv.d3.js"></script>
+		<script src="/bower_components/angularjs-toaster/toaster.min.js"></script>
+		<script src="/bower_components/d3/d3.min.js"></script>
+		<script src="/bower_components/nvd3/nv.d3.min.js"></script>
 		<script src="/bower_components/ngRadialGauge/src/ng-radial-gauge-dir.js"></script>
 
 		<script src="/js/lib/feedback.js"></script>
