Review activity log and many other features

--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,8 @@
 		<script src="/js/controllers/entidadobjeto.js"></script>
 		<script src="/js/controllers/objetivo.js"></script>
 		<script src="/js/controllers/indicador.js"></script>
-        <script src="/js/controllers/formula.js"></script>
+		<script src="/js/controllers/formula.js"></script>
+		<script src="/js/controllers/registroactividad.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
 		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
