--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,7 @@
 		<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 		<script src="/bower_components/angular-animate/angular-animate.min.js"></script>
 		<script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
+		<script src="/bower_components/angular-i18n/angular-locale_es-es.js"></script>
 
 		<script src="/js/lib/socket.io-1.2.1.js"></script>
 
