Entidad Objeto and stats. Carta de servicio.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="/css/app.css">
 		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/animate.css">
+		<link rel="stylesheet" href="/bower_components/angular-animate-css/build/nga.min.css">
 		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-colorpicker/css/colorpicker.css">
