--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,7 @@
 		<script src="/bower_components/d3/d3.min.js"></script>
 		<script src="/bower_components/nvd3/nv.d3.min.js"></script>
 		<script src="/bower_components/ngRadialGauge/src/ng-radial-gauge-dir.js"></script>
+		<script src="/bower_components/angular-downloadsvg-directive/angular-downloadsvg-directive.min.js"></script>
 
 		<script src="/js/lib/feedback.js"></script>
 
