remove bandwidth using min.js files when environment=production

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 			};
 			var ie8 = false;
 		</script>
-		<script src="/bower_components/jquery/dist/jquery.js"></script>
+		<script src="/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="/bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
 		<!--<![endif]-->
 
@@ -112,7 +112,7 @@
 		<script src="/js/lib/jquery.wordexport.js"></script>
 		<script src="/js/lib/jquery/jquery.sparkline.js"></script>
 
-		<script src="/bower_components/angular/angular.js"></script>
+		<script src="/bower_components/angular/angular.min.js"></script>
 		<script src="/bower_components/angular-route/angular-route.min.js"></script>
 		<script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 		<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
