More bug corrections before next release

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="/css/login.css">
 		<link rel="stylesheet" href="/css/animate.css">
 		<link rel="stylesheet" href="/bower_components/angular-animate-css/build/nga.min.css">
-		<link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
+		<link rel="stylesheet" href="/bower_components/nvd3/build/nv.d3.min.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angularjs-toaster/toaster.min.css">
 		<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
@@ -128,7 +128,7 @@
 		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
 		<script src="/bower_components/angularjs-toaster/toaster.min.js"></script>
 		<script src="/bower_components/d3/d3.min.js"></script>
-		<script src="/bower_components/nvd3/nv.d3.min.js"></script>
+		<script src="/bower_components/nvd3/build/nv.d3.min.js"></script>
 		<script src="/bower_components/ngRadialGauge/src/ng-radial-gauge-dir.js"></script>
 		<script src="/bower_components/angular-downloadsvg-directive/angular-downloadsvg-directive.min.js"></script>
 
